--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "assert": "^1.3.0",
     "ejs": "~0.8.4",
+    "forever": "^0.15.1",
     "grunt": "0.4.2",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-coffee": "~0.10.1",
@@ -19,13 +21,18 @@
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
+    "istanbul": "^0.4.2",
+    "mocha": "^2.3.4",
     "rc": "~0.5.0",
     "sails": "~0.11.2",
-    "sails-disk": "~0.10.0"
+    "sails-disk": "~0.10.0",
+    "supertest": "^1.1.0"
   },
   "scripts": {
     "debug": "node debug app.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "mocha test/bootstrap.test.js test/unit/**/*.test.js",
+    "coverage": "istanbul cover _mocha -- test/bootstrap.test.js test/unit/**/*.test.js"
   },
   "main": "app.js",
   "repository": {
