--- a/.travis.yml
+++ b/.travis.yml
@@ -29,3 +29,6 @@ script:
 after_script:
   - npm run coverage
   - codeclimate-test-reporter < coverage/lcov.info
+
+after_success:
+  - curl -u $USER:$PASSWORD $URL
