--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,6 @@ node_js:
 
 sudo: false
 
-branches:
-  only: master
-
 cache:
   directories:
     - node_modules
@@ -30,5 +27,8 @@ after_script:
   - npm run coverage
   - codeclimate-test-reporter < coverage/lcov.info
 
-after_success:
-  - curl -u $USER:$PASSWORD $URL
+deploy:
+  provider: script
+  script: curl -u $USER:$PASSWORD $URL
+  on:
+    branch: master
