Run jshint before tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,10 @@ before_install:
   - npm install -g npm@^2
 
 install:
-  - npm install -g codeclimate-test-reporter
-  - npm install -g mocha
-  - npm install -g istanbul
-  - npm install -g sails
   - npm install
+
+before_script:
+  - npm run jshint
 
 script:
   - npm test
