--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "keywords": [],
   "dependencies": {
     "assert": "^1.3.0",
+    "codeclimate-test-reporter": "^0.3.0",
     "ejs": "~0.8.4",
     "forever": "^0.15.1",
     "grunt": "0.4.2",
@@ -22,6 +23,7 @@
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
     "istanbul": "^0.4.2",
+    "jshint": "^2.9.1",
     "mocha": "^2.3.4",
     "rc": "~0.5.0",
     "sails": "~0.11.2",
@@ -32,6 +34,7 @@
     "debug": "node debug app.js",
     "start": "node app.js",
     "test": "mocha test/bootstrap.test.js test/unit/**/*.test.js",
+    "jshint": "jshint ./api ./config ./test",
     "coverage": "istanbul cover _mocha -- test/bootstrap.test.js test/unit/**/*.test.js"
   },
   "main": "app.js",
