--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "grunt-contrib-jst": "~0.6.0",
     "grunt-contrib-less": "0.11.1",
     "grunt-contrib-uglify": "~0.4.0",
-    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-watch": "^0.6.0",
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
@@ -26,7 +26,7 @@
     "jshint": "^2.9.1",
     "mocha": "^2.3.4",
     "rc": "~0.5.0",
-    "sails": "~0.11.2",
+    "sails": "~0.11.4",
     "sails-disk": "~0.10.0",
     "supertest": "^1.1.0"
   },
