--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "include-all": "~0.1.3",
     "istanbul": "^0.4.2",
     "jshint": "^2.9.1",
+    "lodash": "^4.3.0",
     "mocha": "^2.3.4",
+    "passport-google-oauth": "^0.2.0",
     "rc": "~0.5.0",
     "sails": "~0.12.0-rc6",
+    "sails-auth": "^2.1.3",
     "sails-disk": "~0.10.0",
     "sails-mongo": "^0.12.0",
     "sails-swagger": "^0.5.1",
