--- a/package.json
+++ b/package.json
@@ -7,33 +7,34 @@
   "dependencies": {
     "assert": "^1.3.0",
     "codeclimate-test-reporter": "^0.3.0",
-    "ejs": "~0.8.4",
+    "ejs": "2.3.4",
     "forever": "^0.15.1",
-    "grunt": "0.4.2",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-coffee": "~0.10.1",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-cssmin": "~0.9.0",
-    "grunt-contrib-jst": "~0.6.0",
-    "grunt-contrib-less": "0.11.1",
-    "grunt-contrib-uglify": "~0.4.0",
-    "grunt-contrib-watch": "^0.6.0",
-    "grunt-sails-linker": "~0.9.5",
-    "grunt-sync": "~0.0.4",
-    "include-all": "~0.1.3",
+    "grunt": "0.4.5",
+    "grunt-contrib-clean": "0.6.0",
+    "grunt-contrib-coffee": "0.13.0",
+    "grunt-contrib-concat": "0.5.1",
+    "grunt-contrib-copy": "0.5.0",
+    "grunt-contrib-cssmin": "0.9.0",
+    "grunt-contrib-jst": "0.6.0",
+    "grunt-contrib-less": "1.1.0",
+    "grunt-contrib-uglify": "0.7.0",
+    "grunt-contrib-watch": "0.5.3",
+    "grunt-sails-linker": "~0.10.1",
+    "grunt-sync": "0.2.4",
+    "include-all": "~0.1.6",
     "istanbul": "^0.4.2",
     "jshint": "^2.9.1",
     "lodash": "^4.3.0",
     "mocha": "^2.3.4",
-    "passport-google-oauth": "^0.2.0",
-    "rc": "~0.5.0",
-    "sails": "~0.12.0-rc6",
+    "passport-google-oauth": "^1.0.0",
+    "rc": "1.0.1",
+    "sails": "~0.12.0",
     "sails-auth": "^2.1.3",
-    "sails-disk": "~0.10.0",
+    "sails-disk": "~0.10.9",
     "sails-mongo": "^0.12.0",
+    "sails-permissions": "^2.2.0",
     "sails-swagger": "^0.5.1",
-    "supertest": "^1.1.0",
+    "supertest": "^1.2.0",
     "swagger-ui": "^2.1.4"
   },
   "scripts": {
