--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "sails-permissions": "^2.2.0",
     "sails-swagger": "^0.5.1",
     "supertest": "^1.2.0",
-    "swagger-ui": "^2.1.4"
+    "swagger-ui": "^2.1.4",
+    "winston": "^2.1.1"
   },
   "scripts": {
     "debug": "node debug app.js",
