--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "passport-google-oauth": "^1.0.0",
     "rc": "1.0.1",
     "sails": "~0.12.0",
-    "sails-auth": "^2.1.3",
+    "sails-auth": "fenichelar/sails-auth",
     "sails-disk": "~0.10.9",
     "sails-mongo": "^0.12.0",
     "sails-permissions": "^2.2.0",
