--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "lodash": "^4.3.0",
     "mocha": "^2.3.4",
     "rc": "1.0.1",
-    "sails": "~0.12.0",
+    "sails": "^0.12.1",
     "sails-disk": "~0.10.9",
     "sails-mongo": "^0.12.0",
     "sails-swagger": "^0.5.1",
