--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "rc": "1.0.1",
     "sails": "^0.12.1",
     "sails-disk": "~0.10.9",
+    "sails-generate-ember-blueprints": "0.0.9",
     "sails-mongo": "^0.12.0",
     "sails-swagger": "^0.5.1",
     "supertest": "^1.2.0",
