--- a/package.json
+++ b/package.json
@@ -40,9 +40,7 @@
   },
   "scripts": {
     "debug": "node debug app.js",
-    "start": "forever -w start app.js",
-    "stop": "forever stopall",
-    "log": "forever logs app.js -f",
+    "start": "sails lift",
     "test": "mocha test/bootstrap.test.js test/unit/**/*.test.js",
     "jshint": "jshint ./api ./config ./test",
     "coverage": "istanbul cover _mocha -- test/bootstrap.test.js test/unit/**/*.test.js"
